--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -19,10 +19,13 @@ html {
   --gray-light: #f1f3f2;
   --gray: #767474;
   --gray-smoky: #ababab;
+  --gray-dark: #72828e;
+  --gray-ouline: #929699;
   --red: #d31414;
 
   --orange-dark: #f9804b;
   --orange-lighter: #fe9013;
+  --orange-darkest: #e47209;
 
   --gradient-orange: linear-gradient(
     113.96deg,
@@ -67,15 +70,9 @@ body {
 /* sections width, margins */
 .watch-your-fav-anim__content,
 .header__content,
-.the-backstage__content,
-.animals_cards,
-.pick-and-feed__frame,
-.testimonials {
+.donate__content,
+.footer-content {
   width: var(--section-height);
-}
-
-.margin-top-big {
-  margin-top: 5rem;
 }
 
 /* buttons */
@@ -107,6 +104,13 @@ body {
 .big-button:hover,
 .btn-square:hover,
 .btn-rectangular:hover {
+  background-color: var(--orange-darkest);
+  background-image: none;
+}
+
+.big-button:active,
+.btn-square:active,
+.btn-rectangular:active {
   background-color: var(--green);
   background-image: none;
 }
@@ -120,35 +124,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-/* frames */
-
-.animal-card:before,
-.pick-and-feed__container-image:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-  margin: -2px;
-  border-radius: inherit;
-  background: var(--gradient-orange);
-}
-
-.testimonial:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-  margin: -1px;
-  border-radius: inherit;
-  background: var(--gradient-light-orange);
 }
 
 /* HEADER */
@@ -174,7 +149,8 @@ body {
   display: flex;
   align-items: center;
 }
-.header__content--left > a {
+.header__content--left > a,
+.footer-content__upper > a {
   color: white;
 }
 
@@ -240,8 +216,354 @@ body {
   background-position-y: center;
 }
 
+/* DONATE */
+.donate {
+  background-image: var(--gradient-light-orange);
+  text-align: center;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.donate__content {
+  margin: 0 auto;
+}
+
+.donate__header-big {
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 3.6rem;
+  line-height: 130%;
+  color: white;
+  text-align: left;
+}
+
+.donate__copy {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 140%;
+  color: white;
+  text-align: left;
+  padding-bottom: 4rem;
+}
+
+.donate__header-smaller {
+  color: var(--orange-lighter);
+  text-transform: none;
+  padding-bottom: 4rem;
+}
+
+.donate__calculator {
+  background: rgba(255, 255, 255, 0.52);
+  backdrop-filter: blur(2px);
+  border-radius: 20px;
+  padding: 4rem 9.2rem;
+}
+
+.donate__header-big-orange {
+  color: var(--orange-lighter);
+  font-size: 4.8rem;
+  line-height: 120%;
+}
+
+.donate__copy--big {
+  font-size: 2.4rem;
+  text-align: left;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+/* -> panda icon part */
+
+.donate__calculator-panda {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 5rem;
+  padding: 5rem 0;
+}
+
+.calculator-panda__number-number {
+  display: block;
+
+  font-size: 7.2rem;
+  line-height: 80%;
+  font-weight: 500;
+  padding-bottom: 1.6rem;
+}
+
+.calculator-panda__number-per {
+  font-size: 1.6rem;
+  line-height: 140%;
+}
+
+.calculator-panda__multiplication-left {
+  position: absolute;
+}
+.calculator-panda__multiplication-right {
+  position: relative;
+  left: 0;
+  transform: scaleX(-1);
+}
+
+.form__descr {
+  font-size: 1.6rem;
+  padding: 2rem 0;
+  text-align: left;
+}
+
+/* -> pseudo progress bar */
+
+.donate__form-progress {
+  padding-bottom: 10rem;
+}
+
+.donate__progress-bg {
+  background-color: var(--black-blue);
+  width: 97.5rem;
+  height: 2.7rem;
+  padding: 0 1.5rem;
+  border-radius: 2px;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.donate__form-line {
+  width: 91.5rem;
+  background-color: var(--gray-dark);
+  height: 2px;
+  display: block;
+  position: absolute;
+  z-index: 1;
+}
+
+.donate__form-dots {
+  z-index: 2;
+  width: 91.5rem;
+  display: flex;
+
+  justify-content: space-between;
+  position: absolute;
+}
+
+.donate__form-dot {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  background-color: var(--yellow);
+  position: relative;
+  left: 2rem;
+  top: 2rem;
+}
+
+.donate__form-dot--chosen::before {
+  z-index: 10;
+
+  border: 1px solid var(--orange-dark);
+  border-radius: 50%;
+  display: block;
+  content: " ";
+  width: 2.3rem;
+  height: 2.3rem;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.donate__form-dot--chosen::after {
+  z-index: 10;
+  border: 1px solid var(--orange-dark);
+  border-radius: 50%;
+  display: block;
+  content: " ";
+  width: 4rem;
+  height: 4rem;
+  position: relative;
+  left: 50%;
+  top: -2rem;
+  transform: translate(-50%, -50%);
+}
+
+.dot-clickable {
+  background-color: transparent;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  left: -2rem;
+  cursor: pointer;
+}
+
+.donate__form-labels {
+  display: flex;
+  width: 102%;
+  justify-content: space-between;
+  position: relative;
+  top: 3rem;
+}
+
+.donate__form-label {
+  font-size: 2.6rem;
+  display: block;
+
+  width: 7rem;
+  line-height: 140%;
+  font-weight: 500;
+}
+
+.donate__form-label--chosen {
+  color: var(--orange-darkest);
+}
+
+/* -> input */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+  background-color: transparent;
+  box-shadow: none;
+  border: 1px var(--gray-ouline) solid;
+  border-radius: 2px;
+  min-height: 5.4rem;
+  min-width: 26.8rem;
+  font-size: 1.6rem;
+  padding: 0 1rem;
+  display: block;
+  margin: 0 auto;
+}
+
+.input-wrapper {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+.currencyinput {
+  position: absolute;
+  right: 1rem;
+  top: 2rem;
+}
+
+.radio-btns {
+  display: block;
+  position: relative;
+  padding-top: 1rem;
+}
+
+.radio-btns input {
+  color: red;
+  background-color: blue;
+}
+
+.donate__btn {
+  margin: 3rem auto;
+}
+
+.donate__form-share {
+  font-size: 1.6rem;
+  line-height: 140%;
+}
+
+.radio-btns > label {
+  font-size: 1.6rem;
+}
+
 /*footer */
 
 .footer {
   background-color: black;
+}
+
+.footer-content {
+  margin: 0 auto;
+  padding: 5rem 0;
+}
+.footer-content__upper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-content__upper > form {
+  font-size: 2.4rem;
+  color: white;
+}
+
+.subscribe-text {
+  padding-bottom: 1rem;
+}
+
+.input-footer {
+  -moz-appearance: textfield;
+  background-color: transparent;
+  box-shadow: none;
+  border: 1px var(--orange-dark) solid;
+  border-radius: 2px;
+  min-height: 4.2rem;
+  min-width: 22.8rem;
+  font-size: 1.6rem;
+  color: white;
+  padding-left: 1rem;
+}
+
+.subscribe-btn {
+  min-width: 12.9rem;
+  min-height: 4.2rem;
+  font-size: 1.6rem;
+  border: 1px solid var(--black-blue);
+}
+
+.footer-content__middle {
+  padding: 5rem 0;
+}
+
+.footer-content__bottom {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.one-social {
+  display: flex;
+  align-items: center;
+  color: white;
+  column-gap: 1rem;
+  font-size: 1.6rem;
+  min-width: 30rem;
+  padding: 0.4rem;
+}
+
+.icon-wrapper {
+  background-color: rgba(196, 196, 196, 0.5);
+  height: 2.6rem;
+  width: 2.6rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+
+  justify-content: center;
+}
+
+.icon-wrapper:hover {
+  background-color: var(--green);
+}
+.icon-wrapper:hover + .social-name {
+  color: var(--green);
+}
+
+.footer-content__middle > a {
+  text-decoration: none;
+}
+
+.footer-copyrights {
+  font-weight: 100;
+  color: white;
+}
+
+.subscribe-btn:active {
+  color: var(--green);
+  border: 1px solid var(--green);
 }
