fix: active link color

--- a/pages/donate/style.css
+++ b/pages/donate/style.css
@@ -188,6 +188,7 @@ body {
 }
 
 .header__navigation-link > *:link,
+.header__navigation-link > *:active,
 .header__attribution {
   text-decoration: none;
   color: white;
