--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -154,3 +154,21 @@
   column-gap: 5rem;
   padding: 5rem 0;
 }
+
+.donate__form-radio-btns {
+  width: 100%;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  gap: 5rem;
+}
+
+.input-wrapper-currency-position {
+  position: relative;
+  display: inline-block;
+  text-align: center;
+}
+
+.donate__btn {
+  margin: 3rem auto;
+}
