--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -346,6 +346,10 @@
   font-weight: bold;
 }
 
+.donate__form-another-am + p {
+  color: var(--gray);
+}
+
 .donate__form-another-am:focus + p {
   color: var(--green);
 }
@@ -355,142 +359,110 @@
   opacity: 1;
 }
 
-.donate__form-radio-btns {
-  width: 100%;
-  display: flex;
-  position: relative;
-  padding-top: 1rem;
-  justify-content: center;
-  gap: 5rem;
+.donate__form-another-am:invalid + p {
+  color: var(--red);
+}
+
+.donate__form-another-am:invalid::placeholder {
+  color: var(--red);
+  opacity: 1;
 }
 
 /* -> pseudo progress bar */
 
-.donate__form-progress {
-  padding-bottom: 10rem;
-}
-
 .donate__progress-bg {
   background-color: var(--black-blue);
-  width: 97.5rem;
+  width: 100%;
   height: 2.7rem;
-  padding: 0 1.5rem;
   border-radius: 2px;
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.donate__form-line {
-  width: 91.5rem;
-  background-color: var(--gray-dark);
-  height: 2px;
-  display: block;
-  position: absolute;
   z-index: 1;
 }
 
-.donate__form-dots {
-  z-index: 2;
-  width: 91.5rem;
-  display: flex;
-
-  justify-content: space-between;
+.donate__form-line {
+  width: calc(90% - 2rem);
+  background-color: var(--gray-smoky);
+  height: 2px;
+  display: block;
   position: absolute;
+  z-index: 2;
+}
+
+.donate__form-dots {
+  z-index: 3;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.donate__form-dots p {
+  font-size: var(--bigger-font);
+  position: relative;
+  top: -4rem;
 }
 
 .donate__form-dot {
   width: 1rem;
   height: 1rem;
   border-radius: 50%;
-  background-color: var(--yellow);
+  content: " ";
+  display: block;
   position: relative;
-  left: 2rem;
-  top: 2rem;
+  background-color: var(--yellow);
 }
 
-.donate__form-dot--chosen::before {
-  z-index: 10;
+.dot-clickable {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 
-  border: 1px solid var(--orange-dark);
-  border-radius: 50%;
+.donate__form-dot-clickable-area {
+  width: 5rem;
+  height: 5rem;
+  content: " ";
+  display: flex;
+  cursor: pointer;
+  position: relative;
+  top: -4rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.donate__form-dot--chosen .donate__form-label {
+  color: var(--orange-dark);
+}
+
+/* styles for chosen dot */
+.donate__form-dot--chosen .donate__form-dot-clickable-area::after {
+  position: relative;
   display: block;
   content: " ";
   width: 2.3rem;
   height: 2.3rem;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.donate__form-dot--chosen::after {
-  z-index: 10;
+  position: absolute;
   border: 1px solid var(--orange-dark);
   border-radius: 50%;
+}
+
+.donate__form-dot--chosen .donate__form-dot-clickable-area::before {
+  position: relative;
   display: block;
   content: " ";
   width: 4rem;
   height: 4rem;
-  position: relative;
-  left: 50%;
-  top: -2rem;
-  transform: translate(-50%, -50%);
+  position: absolute;
+  border: 1px solid var(--orange-dark);
+  border-radius: 50%;
 }
 
-.dot-clickable {
-  background-color: transparent;
-  width: 50px;
-  height: 50px;
-  position: relative;
-  left: -2rem;
-  cursor: pointer;
-}
-
-.donate__form-labels {
-  display: flex;
-  width: 102%;
-  justify-content: space-between;
-  position: relative;
-  top: 3rem;
-}
-
-.donate__form-label {
-  font-size: 2.6rem;
-  display: block;
-
-  width: 7rem;
-  line-height: 140%;
-  font-weight: 500;
-}
-
-.donate__form-label--chosen {
-  color: var(--orange-darkest);
-}
-
-/* -> input */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-.input-wrapper {
-  position: relative;
-  display: inline-block;
-  text-align: center;
-}
-
-.donate__btn {
-  margin: 3rem auto;
-}
-
-.donate__form-share {
-  font-size: 1.6rem;
-  line-height: 140%;
-}
-
-.radio-btns > label {
-  font-size: 1.6rem;
+.dot-clickable:not(.donate__form-dot--chosen)
+  .donate__form-dot-clickable-area:hover
+  .donate__form-dot {
+  background-color: var(--green);
 }
