--- a/assets/styles/typography.css
+++ b/assets/styles/typography.css
@@ -39,3 +39,8 @@ li {
   font-weight: 400;
   line-height: 120%;
 }
+
+.FONT-short-description {
+  font-size: var(--normal-font);
+  line-height: 140%;
+}
