--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -16,6 +16,12 @@
   margin: 0 auto;
 }
 
+.center-translate {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .margin-after-middle {
   margin-bottom: 2rem;
 }
@@ -26,6 +32,11 @@
 
 .margin-after-bigger {
   margin-bottom: 8rem;
+}
+
+.padding-section-big {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 /* ------------------------- HEADER */
@@ -116,6 +127,112 @@
 
 /* 1. MAIN ----------------------------------------------- */
 
+/* 1.1 WATCH YOUR FAVOURITE ANIMAL PART */
+
+.watch-your-fav-anim {
+  width: 100vw;
+  background-image: url(../../assets/images/Giant\ Panda.png);
+  min-height: 78rem;
+  background-size: cover;
+  position: relative;
+}
+
+.watch-your-fav-anim__content {
+  position: absolute;
+  text-align: right;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  flex-direction: column;
+  width: 100%;
+}
+
+.watch-your-fav-anim__heading-wrapper {
+  display: flex;
+  max-width: 55rem;
+  position: relative;
+  flex-direction: column;
+  align-items: center;
+}
+
+/* 1.2 BACKSTAGE PART */
+
+.the-backstage__content {
+  display: flex;
+  column-gap: 8.2rem;
+}
+
+/* 1.3 ANIMALS CARDS */
+
+.animal_cards-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  position: relative;
+  row-gap: var(--bigger-font);
+}
+
+.animal-card {
+  display: inline-block;
+  position: relative;
+  box-sizing: border-box;
+  background-clip: padding-box;
+}
+
+.animal-cards__controls {
+  position: absolute;
+  width: 115%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.animal-card__info {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  align-items: center;
+  position: relative;
+}
+
+/* 1.4 PICK AND FEED */
+.pick-and-feed__frame {
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.pick-and-feed__widget {
+  display: flex;
+  justify-content: space-evenly;
+  position: relative;
+}
+
+.pick-and-feed__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.pick-and-feed__container-image {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.pick-and-feed__card-arrows {
+  position: absolute;
+  display: flex;
+  width: 80%;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 16.8rem;
+}
+
+.pick-and-feed__container-text {
+  text-align: left;
+  display: inline;
+  width: 16.8rem;
+}
+
 /* 2. DONATE -------------------------------------------------- */
 .donate__panda-header {
   width: 100vw;
@@ -126,9 +243,6 @@
 .donate {
   padding-top: 5rem;
   padding-bottom: 5rem;
-}
-.donate__calculator {
-  padding: 6rem 9.2rem;
 }
 
 .donate__form-another-am {
