--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,244 +1,3 @@
-/* WATCH YOUR FAVOURITE ANIMAL PART */
-
-.watch-your-fav-anim {
-  width: 100vw;
-  background-image: url(../../assets/images/Giant\ Panda.png);
-  min-height: 78rem;
-  background-size: cover;
-  position: relative;
-}
-
-.watch-your-fav-anim__content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: right;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  flex-direction: column;
-}
-
-.watch-your-fav-anim__heading-wrapper {
-  height: 46.5rem;
-  max-width: 55rem;
-}
-
-.watch-your-fav-anim__heading-wrapper:after {
-  background-image: var(--gradient-orange);
-  content: "";
-  width: 46.5rem;
-  height: 46.5rem;
-  border-radius: 50%;
-  bottom: 25%;
-  right: 10%;
-  position: absolute;
-  z-index: -1;
-}
-
-.watch-your-fav-anim__heading {
-  font-weight: 700;
-  color: white;
-  text-transform: uppercase;
-  line-height: 75%;
-  text-align: center;
-  font-size: 10.6rem;
-}
-
-.watch-your-fav-anim__heading--decoration {
-  color: var(--yellow);
-}
-
-/* THE BACKSTAGE */
-
-.the-backstage {
-  background-image: url(../../assets/images/flower_foto1.png);
-  background-repeat: no-repeat;
-  background-position: right;
-  padding: 10rem 0;
-}
-
-.the-backstage__content {
-  margin: 0 auto;
-  display: flex;
-  column-gap: 8.2rem;
-  font-weight: lighter;
-}
-
-.the-backstage__heading {
-  font-size: 4.8rem;
-  line-height: 120%;
-  padding-bottom: 2rem;
-  font-weight: lighter;
-}
-
-.the-backstage__copy {
-  font-size: 1.6rem;
-  line-height: 130%;
-}
-
-.the-backstage__subheading {
-  font-size: 2.4rem;
-  padding: 4rem 0;
-  font-weight: lighter;
-}
-
-/* ANIMALS CARDS */
-.animals-cards__background {
-  background: url(../../assets/images/palm_foto.png) left bottom no-repeat,
-    url(../../assets/images/strelitzia\ 1.png) right bottom no-repeat;
-}
-.animals_cards {
-  margin: 0 auto;
-  padding: 10rem 0;
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  row-gap: 2rem;
-}
-
-.animal-card {
-  display: inline-block;
-  position: relative;
-  box-sizing: border-box;
-  background-color: white;
-  background-clip: padding-box;
-  border: solid 2px transparent;
-  border-radius: 5px;
-}
-
-.animal-cards__controls {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-
-  width: 115%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.animal-card__image {
-  overflow: hidden;
-}
-
-.animal-card__info {
-  display: flex;
-  justify-content: space-between;
-  padding: 1rem;
-  align-items: center;
-}
-
-.animal-card__title {
-  font-size: 1.6rem;
-  text-transform: uppercase;
-}
-
-.animal-card__origin {
-  font-size: 1.6rem;
-  font-weight: lighter;
-}
-
-.animal-cards__button {
-  margin: 5rem auto 0 auto;
-}
-
-.animal-card__image-wrapper {
-  width: inherit;
-  height: inherit;
-  overflow: hidden;
-}
-
-.animal-card__image:hover {
-  transform: scale(1.1);
-  overflow: hidden;
-  animation: transform 1s ease;
-}
-
-/* PICK AND FEED */
-.pick-and-feed {
-  background-image: var(--gradient-light-orange);
-  padding: 10rem 0;
-}
-
-.pick-and-feed__frame {
-  box-sizing: border-box;
-  background: rgba(253, 253, 255, 0.52);
-  backdrop-filter: blur(2px);
-  border-radius: 20px;
-  margin: 0rem auto;
-  padding: 5rem 10rem;
-  text-align: center;
-}
-
-.pick-and-feed__title {
-  color: var(--orange-lighter);
-  font-size: 4.8rem;
-  font-weight: normal;
-  padding-bottom: 3.5rem;
-}
-.pick-and-feed__subtitle {
-  text-align: left;
-  font-size: 2.4rem;
-  font-weight: normal;
-  padding-bottom: 3.5rem;
-}
-
-.pick-and-feed__copy {
-  text-align: left;
-  font-size: 1.6rem;
-  font-weight: lighter;
-}
-
-.pick-and-feed__copy--bold {
-  font-weight: bolder;
-  display: block;
-  padding-bottom: 1rem;
-}
-
-.pick-and-feed__copy--link:link {
-  color: var(--black-blue);
-  text-decoration: underline;
-  text-decoration-color: var(--orange-lighter);
-  text-underline-offset: 0.5rem;
-}
-
-.pick-and-feed__heading {
-  font-size: 3.6rem;
-  padding: 5rem;
-}
-
-.pick-and-feed__widget {
-  display: flex;
-  justify-content: space-evenly;
-}
-
-.pick-and-feed__container {
-  max-width: 16.8rem;
-}
-
-.pick-and-feed__container-image {
-  background-color: white;
-  border-radius: 5px;
-  width: 16.8rem;
-  height: 16.8rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-}
-
-.pick-and-feed__container-text {
-  text-align: left;
-  font-size: 1.6rem;
-  padding: 4rem 0;
-}
-.pick-and-feed__button {
-  margin: 1rem auto;
-}
-
 /* TESTIMONIALS */
 
 .testimonials-background {
@@ -273,6 +32,93 @@
 
 /* 1. MAIN ----------------------------------------------- */
 
+/* 1.1 WATCH YOUR FAVOURITE ANIMAL PART */
+
+/* -> heading dot */
+
+.watch-your-fav-anim__heading-wrapper:after {
+  background-image: var(--gradient-orange);
+  content: "";
+  width: 46.5rem;
+  height: 46.5rem;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  top: calc(var(--superbig-font) * -1.5);
+  left: calc(var(--superbig-font) * -1.5);
+  z-index: -1;
+}
+
+/* 1.2 BACKSTAGE PART */
+
+.the-backstage {
+  background-image: url(../../assets/images/flower_foto1.png);
+  background-repeat: no-repeat;
+  background-position: right;
+}
+
+/* 1.3 ANIMALS CARDS */
+
+.animals-cards__background {
+  background: url(../../assets/images/palm_foto.png) left bottom no-repeat,
+    url(../../assets/images/strelitzia\ 1.png) right bottom no-repeat;
+}
+
+.animal-card {
+  background-color: white;
+  border: solid 2px transparent;
+  border-radius: 5px;
+}
+
+.animal-card__image {
+  overflow: hidden;
+}
+
+.animal-card__image-wrapper {
+  width: inherit;
+  height: inherit;
+  overflow: hidden;
+}
+/* -> animations */
+.animal-card__image:hover {
+  transform: scale(1.1);
+  overflow: hidden;
+  animation: transform 1s ease;
+}
+
+.animal-card__image-wrapper:hover + .animal-card__info {
+  background-color: var(--black-blue);
+  color: white;
+  transition: all 0.5s ease;
+}
+
+/* 1.4 PICK AND FEED */
+
+.pick-and-feed {
+  background-image: var(--gradient-light-orange);
+}
+
+.pick-and-feed__subtitle {
+  text-align: left;
+}
+
+.pick-and-feed__copy {
+  text-align: left;
+}
+
+.pick-and-feed__container-image {
+  background-color: white;
+  border-radius: 5px;
+  width: 16.8rem;
+  height: 16.8rem;
+}
+
+.pick-and-feed__container-text {
+  text-align: left;
+  display: inline;
+  width: 16.8rem;
+}
+
 /* 2. DONATE -------------------------------------------------- */
 
 /* 2.1 header */
@@ -302,12 +148,6 @@
 
 .donate__header-smaller {
   text-align: left;
-}
-
-.donate__calculator {
-  background: rgba(255, 255, 255, 0.52);
-  backdrop-filter: blur(2px);
-  border-radius: 20px;
 }
 
 .donate__copy--big {
@@ -438,7 +278,7 @@
   color: var(--orange-dark);
 }
 
-/* styles for chosen dot */
+/* -> -> styles for chosen dot */
 .donate__form-dot--chosen .donate__form-dot-clickable-area::after {
   position: relative;
   display: block;
