--- a/assets/styles/typography.css
+++ b/assets/styles/typography.css
@@ -61,7 +61,6 @@ li {
   color: white;
   text-transform: uppercase;
   line-height: 75%;
-  text-align: center;
   font-size: 10.6rem;
 }
 
@@ -91,4 +90,10 @@ li {
 .pick-and-feed__copy--bold {
   font-weight: bolder;
   display: block;
+}
+
+/* testimonials */
+
+.testimonial__name {
+  font-weight: normal;
 }
