feat: 1000px respons. part 1

--- a/assets/styles/globalComponents.css
+++ b/assets/styles/globalComponents.css
@@ -30,8 +30,8 @@
 /*backgrounds */
 
 .white-transparent-background-section {
-  background: rgba(255, 255, 255, 0.52);
-  backdrop-filter: blur(2px);
+  background-color: rgba(255, 255, 255, 0.52);
+  backdrop-filter: blur(4px);
   border-radius: 20px;
   padding: 6rem 9.2rem;
 }
