--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,15 +1,7 @@
 /* global */
 
 /* sections width, margins */
-.watch-your-fav-anim__content,
-.header__content,
-.donate__content,
-.the-backstage__content,
-.animals_cards,
-.pick-and-feed__frame,
-.testimonials,
-.footer-content,
-.testimonials {
+.subsection {
   max-width: var(--section-height);
 }
 
@@ -28,11 +20,11 @@
 }
 
 .margin-after-big {
-  margin-bottom: 5rem;
+  margin-bottom: 5rem !important;
 }
 
 .margin-after-bigger {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 
 .padding-section-big {
@@ -117,6 +109,12 @@
   justify-content: space-between;
 }
 
+.footer__navigation {
+  display: flex;
+  min-width: 30rem;
+  justify-content: space-around;
+}
+
 .subscribe-text {
   padding-bottom: 1rem;
 }
@@ -134,6 +132,7 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
+  column-gap: 100px;
 }
 
 .bottom__socials {
@@ -156,20 +155,18 @@
 
 .watch-your-fav-anim {
   width: 100vw;
-  background-image: url(../../assets/images/Giant\ Panda.png);
-  min-height: 78rem;
-  background-size: cover;
   position: relative;
 }
 
 .watch-your-fav-anim__content {
-  position: absolute;
+  position: relative;
   text-align: right;
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
   flex-direction: column;
   width: 100%;
+  padding: 10rem 0;
 }
 
 .watch-your-fav-anim__heading-wrapper {
@@ -183,18 +180,28 @@
 /* 1.2 BACKSTAGE PART */
 
 .the-backstage__content {
-  display: flex;
-  column-gap: 8.2rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 5%;
 }
 
 /* 1.3 ANIMALS CARDS */
 
 .animal_cards-container {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-row: 1fr 1fr;
+  grid-column-gap: 2%;
+  grid-row-gap: 2%;
   position: relative;
-  row-gap: var(--bigger-font);
+}
+
+.animal-card__image-wrapper {
+  width: 100%;
+}
+
+.animal-card__image-wrapper > img {
+  width: 100%;
 }
 
 .animal-card {
@@ -202,6 +209,7 @@
   position: relative;
   box-sizing: border-box;
   background-clip: padding-box;
+  width: 100%;
 }
 
 .animal-cards__controls {
@@ -225,14 +233,18 @@
 }
 
 .pick-and-feed__widget {
-  display: flex;
-  justify-content: space-evenly;
-  position: relative;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  margin: 0 2vw;
 }
 
-.pick-and-feed__container {
-  display: flex;
-  flex-direction: column;
+.pick-and-feed__widget > .pick-and-feed__card-arrow {
+  min-height: 16.8rem;
+  display: grid;
+  align-items: center;
+  object-fit: scale-down;
+
+  max-width: 100%;
 }
 
 .pick-and-feed__container-image {
@@ -240,20 +252,13 @@
   align-items: center;
   justify-content: center;
   position: relative;
-}
-
-.pick-and-feed__card-arrows {
-  position: absolute;
-  display: flex;
-  width: 80%;
-  justify-content: space-evenly;
-  align-items: center;
+  width: 16.8rem;
   height: 16.8rem;
 }
 
 .pick-and-feed__container-text {
   text-align: left;
-  display: inline;
+  display: block;
   width: 16.8rem;
 }
 
@@ -265,7 +270,7 @@
   grid-auto-flow: column;
   gap: 2.4rem;
   overflow-y: auto;
-  overscroll-behavior-x: contain;
+  overscroll-behavior-x: cover;
   scroll-snap-type: x mandatory;
   padding-bottom: var(--bigger-font);
 }
@@ -273,7 +278,7 @@
 .testimonial {
   box-sizing: border-box;
   position: relative;
-  width: 26.8rem;
+  min-width: calc(16.8em - 0.2rem);
   max-height: 40rem;
   margin: 0.2rem;
   padding: 1.5rem;
