--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -4,11 +4,20 @@
 
 /* 1.1 WATCH YOUR FAVOURITE ANIMAL PART */
 
+.watch-your-fav-anim {
+  background-image: url(../../assets/images/6c4379c95b7fac4756f94f501e2105b7.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: bottom 40%;
+}
+
 /* -> heading dot */
 
-.watch-your-fav-anim__heading-wrapper:after {
+.watch-your-fav-anim__heading-wrapper:before {
   background-image: var(--gradient-orange);
-  content: "";
+
+  content: " ";
   width: 46.5rem;
   height: 46.5rem;
   border-radius: 50%;
@@ -16,7 +25,7 @@
   position: absolute;
   top: calc(var(--superbig-font) * -1.5);
   left: calc(var(--superbig-font) * -1.5);
-  z-index: -1;
+  z-index: 1;
 }
 
 /* 1.2 BACKSTAGE PART */
@@ -24,7 +33,15 @@
 .the-backstage {
   background-image: url(../../assets/images/flower_foto1.png);
   background-repeat: no-repeat;
+  width: auto;
   background-position: right;
+}
+
+.the-backstage__left {
+  background-image: url(../../assets/images/bamboo-cap.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* 1.3 ANIMALS CARDS */
@@ -71,8 +88,10 @@
 .pick-and-feed__container-image {
   background-color: white;
   border-radius: 5px;
-  width: 16.8rem;
-  height: 16.8rem;
+}
+
+.pick-and-feed__widget > .pick-and-feed__card-arrow {
+  content: url(../../assets/icons/arrow.svg);
 }
 
 /* 1.5 TESTIMONIALS */
