--- a/assets/styles/typography.css
+++ b/assets/styles/typography.css
@@ -62,6 +62,7 @@ li {
   text-transform: uppercase;
   line-height: 75%;
   font-size: 10.6rem;
+  z-index: 2;
 }
 
 .watch-your-fav-anim__heading--decoration {
