--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,6 +1,7 @@
 /* global */
 
 /* sections width, margins */
+
 .subsection {
   max-width: var(--section-height);
 }
@@ -59,9 +60,10 @@
 /* ------------------------- HEADER */
 .header {
   height: 8rem;
-  position: relative;
+  position: fixed;
+  width: 100%;
   top: 0;
-  left: 0;
+  z-index: 100;
 }
 
 .header__content {
@@ -156,6 +158,7 @@
 .watch-your-fav-anim {
   width: 100vw;
   position: relative;
+  margin-top: 3rem;
 }
 
 .watch-your-fav-anim__content {
@@ -235,7 +238,9 @@
 .pick-and-feed__widget {
   display: grid;
   grid-template-columns: repeat(5, auto);
-  margin: 0 2vw;
+  margin: 0 auto;
+  padding: 0 2vw;
+  max-width: 80rem;
 }
 
 .pick-and-feed__widget > .pick-and-feed__card-arrow {
@@ -243,7 +248,6 @@
   display: grid;
   align-items: center;
   object-fit: scale-down;
-
   max-width: 100%;
 }
 
@@ -308,7 +312,7 @@
 /* 2. DONATE -------------------------------------------------- */
 .donate__panda-header {
   width: 100vw;
-  min-height: 39rem;
+  min-height: 47rem;
   position: relative;
 }
 
