--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -17,17 +17,24 @@
     margin: 0 auto;
   }
   /* watch your fav animal steps */
+  .watch-your-fav-anim {
+    min-height: 60vw;
+  }
+
   .watch-your-fav-anim__heading-wrapper {
     max-width: 50%;
+    top: 8vw;
   }
 
   .watch-your-fav-anim__heading-wrapper:before {
     width: 33vw;
     height: 33vw;
+    top: -2vw;
+    left: -2vw;
   }
 
   .watch-your-fav-anim__heading-wrapper > h2 {
-    font-size: 7.2vw;
+    font-size: 7.5vw;
   }
 }
 
@@ -209,12 +216,34 @@
   /* watch ypur fav */
   .watch-your-fav-anim {
     margin-top: 0;
+    position: relative;
+  }
+  .watch-your-fav-anim__content {
+    max-width: 100vw;
+    position: static;
+  }
+
+  .watch-your-fav-anim__heading-wrapper {
+    position: static;
+  }
+
+  .watch-your-fav-anim__button {
+    position: absolute;
+    left: 2rem;
+    bottom: 3rem;
+  }
+
+  .watch-your-fav-anim__heading-wrapper:before {
+    position: absolute;
+    top: 2vw;
+    left: 50vw;
   }
 
   /* backstage */
   .the-backstage__content {
     grid-template-columns: auto auto;
     grid-gap: 0;
+    margin-right: -2rem !important;
   }
 
   .the-backstage__left {
@@ -222,18 +251,14 @@
     min-width: 8em;
     grid-column-start: 2;
     background-position-y: center;
-    background-position-x: left 120%;
+    background-position-x: left;
     background-size: contain;
-  }
-
-  .the-backstage__left > * {
-    border: 2px solid green;
   }
 
   .the-backstage__right {
     grid-column-start: 0;
     grid-row-start: 1;
-    padding: 0 2rem;
+    padding-left: 2rem;
   }
 
   /* animal cards */
@@ -251,6 +276,11 @@
 
   .animal-cards__controls {
     max-width: 25vw;
+  }
+
+  .animal_cards-container {
+    overflow: hidden;
+    max-width: calc(100vw - 4rem);
   }
 
   .animals-cards__background {
@@ -308,6 +338,7 @@
   .donate {
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-bottom: 1rem;
   }
   #dot-5000 {
     display: none;
@@ -339,4 +370,43 @@
 /* 320px 320px 320px 320px 320px 320px 320px 320px  */
 
 @media only screen and (max-width: 320px) {
+  /* global */
+
+  .watch-your-fav-anim__content {
+    top: 4vw;
+  }
+
+  /* buttons resizing */
+
+  .big-button,
+  .btn-rectangular {
+    margin: 0 auto;
+    min-width: 90vw;
+    width: 90vw;
+    max-width: 90vw;
+  }
+
+  /* watch your fav anim */
+
+  .watch-your-fav-anim {
+    margin-bottom: 10vw;
+  }
+
+  .watch-your-fav-anim__button {
+    position: absolute;
+    left: 5vw;
+    top: 65vw;
+  }
+
+  /* the backstage */
+
+  .the-backstage__content {
+    grid-template-columns: 1vw;
+    position: relative;
+    border: 2px solid green;
+  }
+  .the-backstage__left {
+    position: absolute;
+    left: 0;
+  }
 }
