--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -81,14 +81,16 @@
   align-items: center;
 }
 
-.header__logo {
+.header__logo,
+.footer__logo {
   display: inline-block;
   max-width: 8.2rem;
   text-align: center;
   position: relative;
 }
 
-.header__logo-img {
+.header__logo-img,
+.footer__logo-img {
   position: absolute;
   top: 50%;
   left: 12%;
