feat. testimonials interactivity

--- a/assets/styles/buttonsAndLinks.css
+++ b/assets/styles/buttonsAndLinks.css
@@ -67,6 +67,20 @@
   display: none;
 }
 
+.btn-x-testimonial {
+  background-image: white;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.2rem;
+  color: black;
+  content: "x";
+}
+
 .big-button:disabled,
 .btn-square:disabled,
 .btn-rectangular:disabled {
