--- a/assets/styles/media.css
+++ b/assets/styles/media.css
@@ -332,6 +332,7 @@
     padding-left: 2rem;
     padding-right: 2rem;
     padding-bottom: 6rem;
+    position: relative;
   }
 
   .testimonials-wrapper {
