fix: migrate data to json file

--- a/assets/styles/globalSections.css
+++ b/assets/styles/globalSections.css
@@ -101,8 +101,13 @@
 
 .popup-testimonial {
   position: absolute;
-
   background-color: white;
   display: none;
   z-index: 3000;
+}
+
+.btn-x-testimonial {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
